--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -1,5 +1,5 @@
 #beginButton {
-    -fx-background-color: orange;
+    -fx-background-color: red;
     -fx-text-fill: white;
     -fx-font-size: 20;
     -fx-font-weight: bold;
