--- a/src/main/resources/org/example/some/scene2.fxml
+++ b/src/main/resources/org/example/some/scene2.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="378.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.Scene2">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.Scene2">
    <children>
-      <ImageView fx:id="sceneFarm" fitHeight="436.0" fitWidth="666.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="sceneFarm" fitHeight="550.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/fon.png" />
+            <Image url="@../../../images/farm_image.png" />
          </image>
       </ImageView>
    </children>
