--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -3,7 +3,7 @@
     -fx-text-fill: white;
     -fx-font-size: 20;
     -fx-font-weight: bold;
-    -fx-border: 1px solid black;
+    -fx-border-color: black;
     -fx-border-radius: 10;
     -fx-background-radius: 10;
     -fx-padding: 10 20 10 20;
