--- a/src/main/resources/styles/info.css
+++ b/src/main/resources/styles/info.css
@@ -1,4 +1,5 @@
-#beginButton {
+#beginButton,
+#startButton {
     -fx-background-color: red;
     -fx-text-fill: white;
     -fx-font-size: 20;
@@ -7,5 +8,8 @@
     -fx-border-radius: 10;
     -fx-background-radius: 10;
     -fx-padding: 10 20 10 20;
+    -fx-cursor: pointer;
 
 }
+
+
