--- a/src/main/resources/styles/firstLevel.css
+++ b/src/main/resources/styles/firstLevel.css
@@ -19,3 +19,10 @@
     -fx-padding: 10 20 10 20;
     -fx-cursor: pointer;
 }
+
+.yellowButtons {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 40;
+    -fx-background-radius: 40;
+}
