--- a/src/main/resources/styles/info.css
+++ b/src/main/resources/styles/info.css
@@ -1,6 +1,6 @@
 #beginButton,
 #startButton {
-    -fx-background-color: red;
+    -fx-background-color: #C84938;
     -fx-text-fill: white;
     -fx-font-size: 20;
     -fx-font-weight: bold;
