--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -49,11 +49,11 @@
             <Image url="@../../../images/extraTask.png" />
          </image>
       </ImageView>
-      <ImageView id="well" fx:id="well" fitHeight="189.0" fitWidth="138.0" layoutX="77.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="well" fx:id="well" fitHeight="189.0" fitWidth="138.0" layoutX="77.0" layoutY="225.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/well.png" />
          </image>
       </ImageView>
-      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-46.0" layoutY="297.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-46.0" layoutY="297.0" prefHeight="17.0" prefWidth="175.0" progress="0.0" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
