--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="336.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
+<AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="336.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
    <children>
       <ImageView fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -25,25 +25,21 @@
          </image></ImageView>
       <Button id="coinsButton" layoutX="207.0" layoutY="24.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="126.0" stylesheets="@../../../styles/firstLevel.css" />
       <Label id="amountOfCoins" fx:id="amountOfCoins" layoutX="263.0" layoutY="35.0" prefHeight="25.0" prefWidth="63.0" stylesheets="@../../../styles/firstLevel.css" />
-      <Button layoutX="655.0" layoutY="24.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="660.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/instr.png" />
          </image>
       </ImageView>
-      <Button layoutX="718.0" layoutY="25.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="720.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/settings.png" />
          </image>
       </ImageView>
-      <Button layoutX="718.0" layoutY="81.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="721.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/dos.png" />
          </image>
       </ImageView>
-      <Button layoutX="718.0" layoutY="133.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="721.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/extraTask.png" />
@@ -54,6 +50,10 @@
             <Image url="@../../../images/well.png" />
          </image>
       </ImageView>
+      <Button fx:id="buttonInfo" layoutX="655.0" layoutY="24.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonSettings" layoutX="718.0" layoutY="25.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonTasks" layoutX="718.0" layoutY="81.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonExtraTasks" layoutX="718.0" layoutY="133.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-46.0" layoutY="297.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
