Синхронізовано scene builder із класами для роботи з об'єктами

--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -43,7 +43,7 @@
             <Image url="@../../../images/extraTask.png" />
          </image>
       </ImageView>
-      <ImageView id="well" fx:id="well" fitHeight="189.0" fitWidth="138.0" layoutX="77.0" layoutY="225.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="well" fx:id="wellView" fitHeight="189.0" fitWidth="138.0" layoutX="77.0" layoutY="225.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/well.png" />
          </image>
