--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="336.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
+<AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="450.0" prefWidth="792.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
    <children>
       <ImageView fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -43,15 +43,21 @@
             <Image url="@../../../images/extraTask.png" />
          </image>
       </ImageView>
-      <ImageView id="well" fx:id="wellView" fitHeight="189.0" fitWidth="138.0" layoutX="77.0" layoutY="225.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="well" fx:id="wellView" fitHeight="163.0" fitWidth="122.0" layoutX="74.0" layoutY="251.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/well.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="feederView" fitHeight="102.0" fitWidth="142.0" layoutX="560.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/food.png" />
          </image>
       </ImageView>
       <Button fx:id="buttonInfo" layoutX="655.0" layoutY="24.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <Button fx:id="buttonSettings" layoutX="718.0" layoutY="25.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <Button fx:id="buttonTasks" layoutX="718.0" layoutY="81.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <Button fx:id="buttonExtraTasks" layoutX="718.0" layoutY="133.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
-      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-46.0" layoutY="297.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-23.0" layoutY="305.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar fx:id="foodBar" layoutX="623.0" layoutY="321.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" />
    </children>
 </AnchorPane>
