--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="450.0" prefWidth="792.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
+<AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="675.0" prefWidth="1198.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
    <children>
-      <ImageView fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="707.0" fitWidth="1351.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/farm_image.png" />
          </image>
@@ -23,41 +23,41 @@
             <Image url="@../../../images/coins.png" />
          </image></ImageView>
       <Button id="coinsButton" layoutX="207.0" layoutY="24.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="126.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="660.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1093.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/instr.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="720.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/settings.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="721.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/dos.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="721.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1169.0" layoutY="151.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/extraTask.png" />
          </image>
       </ImageView>
-      <ImageView id="well" fx:id="wellView" fitHeight="163.0" fitWidth="122.0" layoutX="74.0" layoutY="251.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="well" fx:id="wellView" fitHeight="163.0" fitWidth="122.0" layoutX="65.0" layoutY="484.0" onMouseClicked="#setWater" onMousePressed="#setWater" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/well.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="feederView" fitHeight="102.0" fitWidth="142.0" layoutX="560.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="feederView" fitHeight="102.0" fitWidth="142.0" layoutX="981.0" layoutY="551.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/food.png" />
          </image>
       </ImageView>
-      <Button fx:id="buttonInfo" layoutX="655.0" layoutY="24.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
-      <Button fx:id="buttonSettings" layoutX="718.0" layoutY="25.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
-      <Button fx:id="buttonTasks" layoutX="718.0" layoutY="81.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
-      <Button fx:id="buttonExtraTasks" layoutX="718.0" layoutY="133.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
-      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-23.0" layoutY="305.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ProgressBar fx:id="foodBar" layoutX="623.0" layoutY="321.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" />
+      <Button fx:id="buttonInfo" layoutX="1112.0" layoutY="22.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="35.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonSettings" layoutX="1155.0" layoutY="75.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonTasks" layoutX="1168.0" layoutY="75.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonExtraTasks" layoutX="1162.0" layoutY="144.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-39.0" layoutY="553.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ProgressBar fx:id="foodBar" layoutX="1078.0" layoutY="553.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" />
    </children>
 </AnchorPane>
