--- a/src/main/resources/org/example/some/choose_First_level.fxml
+++ b/src/main/resources/org/example/some/choose_First_level.fxml
@@ -4,12 +4,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ChooseFirstLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" layoutX="-2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/Open_first.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="47.0" fitWidth="101.0" layoutX="50.0" layoutY="607.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/mainMenu.png" />
          </image>
       </ImageView>
    </children>
