--- a/src/main/resources/org/example/some/choose_Second_level.fxml
+++ b/src/main/resources/org/example/some/choose_Second_level.fxml
@@ -4,12 +4,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ChooseSecondLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/Open_Two.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="51.0" fitWidth="112.0" layoutX="49.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/mainMenu.png" />
          </image>
       </ImageView>
    </children>
