--- a/src/main/resources/org/example/some/choose_Third_level.fxml
+++ b/src/main/resources/org/example/some/choose_Third_level.fxml
@@ -4,12 +4,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ChooseThirdLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/Open_th_level.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="86.0" fitWidth="132.0" layoutX="26.0" layoutY="592.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../Desktop/FarmEvolution/src/main/resources/images/mainMenu.png" />
          </image>
       </ImageView>
    </children>
