--- a/src/main/resources/org/example/some/info.fxml
+++ b/src/main/resources/org/example/some/info.fxml
@@ -5,13 +5,18 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.InfoController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.InfoController">
    <children>
-      <ImageView fx:id="sceneFarm" fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="707.0" fitWidth="1351.0" layoutX="-2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/farm_image.png" />
+            <Image url="@../../../images/Open_first.png" />
          </image>
       </ImageView>
-      <Button fx:id="startButton" layoutX="573.0" layoutY="561.0" mnemonicParsing="false" onAction="#onAction" prefHeight="37.0" prefWidth="130.0" stylesheets="@../../../styles/info.css" text="Start" />
+      <ImageView fx:id="settings" fitHeight="47.0" fitWidth="101.0" layoutX="49.0" layoutY="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/settings.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="startButton" layoutX="544.0" layoutY="600.0" mnemonicParsing="false" onAction="#onAction" prefHeight="52.0" prefWidth="187.0" stylesheets="@../../../styles/info.css" text="Почати" />
    </children>
 </AnchorPane>
