--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="675.0" prefWidth="1198.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
    <children>
-      <ImageView fitHeight="707.0" fitWidth="1351.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="shopButton" fitHeight="707.0" fitWidth="1351.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/farm_image.png" />
          </image>
@@ -59,5 +59,11 @@
       <Button fx:id="buttonExtraTasks" layoutX="1162.0" layoutY="144.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
       <ProgressBar id="waterInWell" fx:id="waterBar" layoutX="-39.0" layoutY="553.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" stylesheets="@../../../styles/firstLevel.css" />
       <ProgressBar fx:id="foodBar" layoutX="1078.0" layoutY="553.0" prefHeight="17.0" prefWidth="175.0" progress="1.0" rotate="-90.0" />
+      <ImageView id="coinsImage" fitHeight="60.0" fitWidth="162.0" layoutX="367.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/shop.png" />
+         </image>
+      </ImageView>
+      <Button id="coinsButton" fx:id="shopButton" layoutX="367.0" layoutY="19.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="51.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
