--- a/src/main/resources/org/example/some/chooseSecondLevel.fxml
+++ b/src/main/resources/org/example/some/chooseSecondLevel.fxml
@@ -8,7 +8,7 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/Open_Two.png" />
+            <Image url="@../../../images/passedLevel/openSec.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="51.0" fitWidth="112.0" layoutX="49.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
