--- a/src/main/resources/org/example/some/info.fxml
+++ b/src/main/resources/org/example/some/info.fxml
@@ -9,12 +9,12 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" layoutX="-2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/Open_first.png" />
+            <Image url="@../../../images/passedLevel/openFirst.png" />
          </image>
       </ImageView>
       <ImageView fx:id="settings" fitHeight="47.0" fitWidth="101.0" layoutX="49.0" layoutY="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/settings.png" />
+            <Image url="@../../../images/firstLevel/icons/settings.png" />
          </image>
       </ImageView>
       <Button fx:id="startButton" layoutX="544.0" layoutY="600.0" mnemonicParsing="false" onAction="#onAction" prefHeight="52.0" prefWidth="187.0" stylesheets="@../../../styles/info.css" text="Почати" />
