--- a/src/main/resources/org/example/some/menu.fxml
+++ b/src/main/resources/org/example/some/menu.fxml
@@ -9,7 +9,7 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/start.png" />
+            <Image url="@../../../images/backGrounds/start.png" />
          </image>
       </ImageView>
       <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Button" textFill="WHITE" />
