--- a/src/main/resources/org/example/some/shop.fxml
+++ b/src/main/resources/org/example/some/shop.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="398.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.Shop">
+<AnchorPane prefHeight="458.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.Shop">
    <children>
-      <ImageView fitHeight="454.0" fitWidth="717.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="707.0" fitWidth="1351.0"  pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/shopBack.JPG" />
+            <Image url="@../../../images/backGrounds/shopBack.JPG" />
          </image>
       </ImageView>
    </children>
