--- a/src/main/resources/org/example/some/shop.fxml
+++ b/src/main/resources/org/example/some/shop.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane prefHeight="458.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.Shop">
    <children>
-      <ImageView fitHeight="707.0" fitWidth="1351.0"  pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/backGrounds/shopBack.JPG" />
+            <Image url="@../../../images/backGrounds/shopBack2.png" />
          </image>
       </ImageView>
    </children>
