--- a/src/main/resources/org/example/some/shop.fxml
+++ b/src/main/resources/org/example/some/shop.fxml
@@ -8,7 +8,7 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/backGrounds/shopBack2.png" />
+            <Image url="@../../../images/shop.png" />
          </image>
       </ImageView>
    </children>
