--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane id="anchorPane" fx:id="anchorPane" prefHeight="675.0" prefWidth="1198.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.FirstLevel">
    <children>
-      <ImageView fx:id="shopButton" fitHeight="707.0" fitWidth="1351.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="707.0" fitWidth="1351.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/firstLevel/farm_image.png" />
          </image>
