--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -64,6 +64,6 @@
             <Image url="@../../../images/firstLevel/icons/shop.png" />
          </image>
       </ImageView>
-      <Button id="coinsButton" fx:id="shopButton" layoutX="367.0" layoutY="19.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="51.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
+      <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
