--- a/src/main/resources/styles/firstLevel.css
+++ b/src/main/resources/styles/firstLevel.css
@@ -12,19 +12,24 @@
 
 }
 
-#coinsButton {
+#coinsButton,
+#shopButton{
     -fx-background-color: transparent;
     -fx-border-color: transparent;
+    -fx-border-width: 3.2;
     -fx-border-radius: 40;
     -fx-background-radius: 10;
     -fx-padding: 10 20 10 20;
     -fx-cursor: pointer;
 }
+#shopButton:hover {
+    -fx-border-color: rgb(255, 153, 123);
+}
 
 .yellowButtons {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
-    -fx-border-radius: 40;
+    -fx-border-radius: 40px;
     -fx-background-radius: 40;
 }
 #waterInWell {
