add an ability to buy animals + serialization

--- a/src/main/resources/org/example/some/shopFirstLevel.fxml
+++ b/src/main/resources/org/example/some/shopFirstLevel.fxml
@@ -5,25 +5,48 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="707.0" prefWidth="1351.0" stylesheets="@../../../styles/shop.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ShopFirstLevel">
    <children>
-      <ImageView id="img" fitHeight="707.0" fitWidth="1461.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="img" fitHeight="793.0" fitWidth="1442.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/shop/shop.png" />
          </image>
       </ImageView>
-      <Button fx:id="backButton" layoutX="41.0" layoutY="553.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="79.0" prefWidth="88.0" styleClass="backButton" stylesheets="@../../../styles/shop.css" translateX="6.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="1247.0">
-            <graphic>
-                <ImageView fitHeight="80.0" fitWidth="84.0" preserveRatio="true" styleClass="backButton">
-                <image>
-                    <Image url="@../../../images/shop/backButton.png" />
-                </image>
-               <cursor>
-                  <Cursor fx:constant="DEFAULT" />
-               </cursor>
-                </ImageView>
-            </graphic>
+          <ImageView fitHeight="80.0" fitWidth="84.0" layoutX="79.0" layoutY="633.0" preserveRatio="true" styleClass="backButton">
+          <image>
+              <Image url="@../../../images/shop/backButton.png" />
+          </image>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+          </ImageView>
+      <Button id="backButton" fx:id="backButton" layoutX="80.0" layoutY="641.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="65.0" prefWidth="66.0" stylesheets="@../../../styles/shop.css" translateX="6.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="1264.0" />
+      <Button layoutX="299.0" layoutY="317.0" mnemonicParsing="false" onAction="#buyGoose" prefHeight="35.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 200 монет">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="662.0" layoutY="312.0" mnemonicParsing="false" onAction="#buyRabbit" prefHeight="35.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 350 монет">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="1008.0" layoutY="312.0" mnemonicParsing="false" onAction="#buySheep" prefHeight="35.0" prefWidth="173.0" rotate="8.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 648 монет">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="442.0" layoutY="671.0" mnemonicParsing="false" onAction="#buyCow" prefHeight="35.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1000 монет">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="878.0" layoutY="671.0" mnemonicParsing="false" onAction="#buyPig" prefHeight="35.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 530 монет">
+         <font>
+            <Font size="14.0" />
+         </font>
       </Button>
    </children>
 </AnchorPane>
