--- a/src/main/resources/styles/shop.css
+++ b/src/main/resources/styles/shop.css
@@ -1,4 +1,4 @@
-#backButton {
+.backButton {
     -fx-background-color: transparent;
     -fx-border-color: black;
     -fx-border-radius: 150;
@@ -6,7 +6,7 @@
 
 }
 
-#backButton:hover {
+.backButton:hover {
     -fx-border-color: lightgray;
 }
 .buyButton {
@@ -22,4 +22,14 @@
     -fx-background-color: #01e1c9;
     -fx-text-fill: black;
     -fx-border-color: #036a5c;
+}
+
+.close {
+    -fx-background-color: transparent;
+    -fx-border-color: black;
+    -fx-border-radius: 150;
+    -fx-background-radius: 150;
+}
+.close:hover {
+    -fx-border-color: lightgray;
 }
