--- a/src/main/resources/org/example/some/chooseSecondLevel.fxml
+++ b/src/main/resources/org/example/some/chooseSecondLevel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,8 +14,9 @@
       </ImageView>
       <ImageView fitHeight="51.0" fitWidth="112.0" layoutX="49.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/mainMenu.png" />
+            <Image url="@../../../images/secondLevel/icons/settings2.png" />
          </image>
       </ImageView>
+      <Button id="beginButton" layoutX="551.0" layoutY="601.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="52.0" prefWidth="205.0" stylesheets="@../../../styles/info.css" text="Продовжити" />
    </children>
 </AnchorPane>
