--- a/src/main/resources/org/example/some/secondLevel.fxml
+++ b/src/main/resources/org/example/some/secondLevel.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.SecondLevel">
    <children>
       <ImageView fitHeight="707.0" fitWidth="1265.0" pickOnBounds="true" preserveRatio="true">
@@ -13,6 +12,48 @@
             <Image url="@../../../images/backGrounds/jungle.png" />
          </image>
       </ImageView>
-      <Button layoutX="178.0" layoutY="27.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="50.0" prefWidth="216.0" />
+
+      <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="33.0" layoutY="25.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/mainMenu.png" />
+         </image></ImageView>
+      <Button id="homeButton" fx:id="homeButton" layoutX="33.0" layoutY="24.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ImageView id="coinsImage" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/coins.png" />
+         </image></ImageView>
+      <Button id="coinsButton" layoutX="207.0" layoutY="24.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="126.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1093.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/icons/instr2.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/icons/settings2.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1168.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/icons/tasks2.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="42.0" layoutX="1169.0" layoutY="151.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/secondLevel/icons/extra2.png" />
+         </image>
+      </ImageView>
+
+      <Button fx:id="buttonInfo" layoutX="1088.0" layoutY="22.0" mnemonicParsing="false" onAction="#showInfo" prefHeight="43.0" prefWidth="59.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonSettings" layoutX="1155.0" layoutY="75.0" mnemonicParsing="false" onAction="#showSettings" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonTasks" layoutX="1168.0" layoutY="75.0" mnemonicParsing="false" onAction="#showTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+      <Button fx:id="buttonExtraTasks" layoutX="1162.0" layoutY="144.0" mnemonicParsing="false" onAction="#showExtraTasks" prefHeight="43.0" prefWidth="47.0" styleClass="yellowButtons" stylesheets="@../../../styles/firstLevel.css" />
+
+      <ImageView id="coinsImage" fitHeight="60.0" fitWidth="162.0" layoutX="367.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/firstLevel/icons/shop.png" />
+         </image>
+      </ImageView>
+      <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
    </children>
 </AnchorPane>
