--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -18,7 +18,7 @@
             <Image url="@../../../images/mainMenu.png" />
          </image></ImageView>
       <Button id="homeButton" fx:id="homeButton" layoutX="33.0" layoutY="24.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
-      <ImageView id="coinsImage" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="coinsImage" fx:id="coinsView" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/coins.png" />
          </image></ImageView>
