--- a/src/main/resources/org/example/some/chooseThirdLevel.fxml
+++ b/src/main/resources/org/example/some/chooseThirdLevel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,5 +17,6 @@
             <Image url="@../../../images/mainMenu.png" />
          </image>
       </ImageView>
+      <Button id="beginButton" layoutX="579.0" layoutY="601.0" mnemonicParsing="false" onAction="#continueGame" prefHeight="50.0" prefWidth="200.0" stylesheets="@../../../styles/info.css" text="Продовжити" />
    </children>
 </AnchorPane>
