--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.some.ThirdLevel"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.ThirdLevel">
+   <children>
 
+      <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/backGrounds/magicBack.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="41.0" fitWidth="81.0" layoutX="33.0" layoutY="25.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/mainMenu.png" />
+         </image></ImageView>
+      <Button id="homeButton" fx:id="homeButton" layoutX="33.0" layoutY="24.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="42.0" prefWidth="81.0" stylesheets="@../../../styles/firstLevel.css" />
+      <ImageView id="coinsImage" fx:id="coinsView" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/coins.png" />
+         </image>
+      </ImageView>
+      <ImageView id="coinsImage" fitHeight="60.0" fitWidth="162.0" layoutX="367.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/firstLevel/icons/shop.png" />
+         </image>
+      </ImageView>
+      <Button id="shopButton" fx:id="shopButton" layoutX="367.0" layoutY="23.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
+
+
+      <Button layoutX="66.0" layoutY="527.0" mnemonicParsing="false" onAction="#previousLevel" prefHeight="84.0" prefWidth="177.0" text="2 level" />
+
+
+   </children>
 </AnchorPane>
