--- a/src/main/resources/org/example/some/info.fxml
+++ b/src/main/resources/org/example/some/info.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,7 +17,13 @@
          <image>
             <Image url="@../../../images/firstLevel/icons/settings.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
-      <Button fx:id="startButton" layoutX="544.0" layoutY="600.0" mnemonicParsing="false" onAction="#onAction" prefHeight="52.0" prefWidth="187.0" stylesheets="@../../../styles/info.css" text="Почати" />
+      <Button fx:id="startButton" layoutX="544.0" layoutY="600.0" mnemonicParsing="false" onAction="#onAction" prefHeight="52.0" prefWidth="187.0" stylesheets="@../../../styles/info.css" text="Почати">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
