--- a/src/main/resources/org/example/some/menu.fxml
+++ b/src/main/resources/org/example/some/menu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,6 +13,9 @@
             <Image url="@../../../images/backGrounds/start.png" />
          </image>
       </ImageView>
-      <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Button" textFill="WHITE" />
+      <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Button" textFill="WHITE">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
