--- a/src/main/resources/org/example/some/shopSecondLevel.fxml
+++ b/src/main/resources/org/example/some/shopSecondLevel.fxml
@@ -23,7 +23,10 @@
             <Image url="@../../../images/shop/close.png" />
          </image>
       </ImageView>
-      <Button fx:id="closeButton" layoutX="1294.0" layoutY="38.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="50.0" prefWidth="50.0" styleClass="close" stylesheets="@../../../styles/shop.css" />
+      <Button fx:id="closeButton" layoutX="1294.0" layoutY="38.0" mnemonicParsing="false" onAction="#backToGame" prefHeight="50.0" prefWidth="50.0" styleClass="close" stylesheets="@../../../styles/shop.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
       <ImageView fx:id="backButtonView" fitHeight="80.0" fitWidth="84.0" layoutX="1275.0" layoutY="400.0" preserveRatio="true" rotate="180.0" styleClass="backButton">
          <image>
             <Image url="@../../../images/shop/backButton.png" />
@@ -32,8 +35,11 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ImageView>
-      <Button fx:id="nextButton" layoutX="1282.0" layoutY="408.0" mnemonicParsing="false" onAction="#thirdShop" prefHeight="65.0" prefWidth="66.0" styleClass="backButton" stylesheets="@../../../styles/shop.css" />
-      <ImageView fx:id="nextButtonView" fitHeight="80.0" fitWidth="84.0" layoutX="81.0" layoutY="404.0" preserveRatio="true" styleClass="backButton">
+      <Button fx:id="nextButton" layoutX="1282.0" layoutY="408.0" mnemonicParsing="false" onAction="#thirdShop" prefHeight="65.0" prefWidth="66.0" styleClass="backButton" stylesheets="@../../../styles/shop.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <ImageView fx:id="nextButtonView" fitHeight="80.0" fitWidth="84.0" layoutX="41.0" layoutY="399.0" preserveRatio="true" styleClass="backButton">
          <image>
             <Image url="@../../../images/shop/backButton.png" />
          </image>
@@ -41,11 +47,29 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ImageView>
-      <Button fx:id="backButton" layoutX="88.0" layoutY="412.0" mnemonicParsing="false" onAction="#firstShop" prefHeight="65.0" prefWidth="66.0" styleClass="backButton" stylesheets="@../../../styles/shop.css" />
-      <Button layoutX="273.0" layoutY="311.0" mnemonicParsing="false" onAction="#buyParrot" prefHeight="27.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 905 монет" />
-      <Button layoutX="647.0" layoutY="311.0" mnemonicParsing="false" onAction="#buyMonkey" prefHeight="27.0" prefWidth="173.0" rotate="1.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1120 монет" />
-      <Button layoutX="984.0" layoutY="305.0" mnemonicParsing="false" onAction="#buyPeacock" prefHeight="27.0" prefWidth="173.0" rotate="8.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1545 монет" />
-      <Button layoutX="431.0" layoutY="660.0" mnemonicParsing="false" onAction="#buyLemur" prefHeight="27.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1700 монет" />
-      <Button layoutX="854.0" layoutY="662.0" mnemonicParsing="false" onAction="#buyDragonfly" prefHeight="27.0" prefWidth="173.0" rotate="1.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 700 монет" />
+      <Button fx:id="backButton" layoutX="48.0" layoutY="407.0" mnemonicParsing="false" onAction="#firstShop" prefHeight="65.0" prefWidth="66.0" styleClass="backButton" stylesheets="@../../../styles/shop.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="273.0" layoutY="311.0" mnemonicParsing="false" onAction="#buyParrot" prefHeight="27.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 905 монет">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="647.0" layoutY="311.0" mnemonicParsing="false" onAction="#buyMonkey" prefHeight="27.0" prefWidth="173.0" rotate="1.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1120 монет">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="984.0" layoutY="305.0" mnemonicParsing="false" onAction="#buyPeacock" prefHeight="27.0" prefWidth="173.0" rotate="8.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1545 монет">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="431.0" layoutY="660.0" mnemonicParsing="false" onAction="#buyLemur" prefHeight="27.0" prefWidth="173.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 1700 монет">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button layoutX="854.0" layoutY="662.0" mnemonicParsing="false" onAction="#buyDragonfly" prefHeight="27.0" prefWidth="173.0" rotate="1.0" styleClass="buyButton" stylesheets="@../../../styles/shop.css" text="Купити за 700 монет">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
